--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="header">
-        <h1> My super website </h1>
+        <h1> My very super website </h1>
     </div>
     <div class="earth" >
-        <h2>Good website</h2>
+        <h2>Good website good</h2>
     </div>
 </body>
 </html>
