--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <div class="earth" >
         <h2>Good website good</h2>
     </div>
+    <div class="earth" >
+        <h2>Another good website</h2>
+    </div>
 </body>
 </html>
